# vsop_compiler

./: .gitignore  CMakeLists.txt  main.cpp  make_archive.sh  out.txt  parser.output  parser.tab.cc  parser.tab.hh  run_tests.sh  vsopcompiler.tar.xz
.devcontainer/: devcontainer.json
examples/: my-class.txt
examples/parser/: factorial.txt
examples/semantic/: cast.vsop  cycles.vsop  factorial.vsop  if_else.vsop  list.vsop  parentClassVar.vsop  redefine.vsop
examples/syntax/: factorial.vsop
examples/tests/: eof-after-comment.txt  string-ends-in-backslash-x.txt  unterminated-string.txt  wrong-backslash-x-escape.txt
src/: CMakeLists.txt  Makefile  calc  driver.cpp  driver.hpp  lexer.cpp  lexer.lex  main.c  main.cpp  parser.cpp  parser.hpp  parser.y  simpleLexer.lex  tokens.hpp
vsopcompiler/: Makefile  driver.cpp  driver.hpp  lexer.lex  main.cpp  out.txt  parser.cpp  parser.hpp  parser.tab.cc  parser.tab.hh  parser.y  scanner.cpp  scanner.hpp  tokens.cpp  tokens.hpp
vsopcompiler/AST/: class.hpp  error_handler.hpp  expr.hpp  field.hpp  inheritance_exception.hpp  method.hpp  nodes.cpp  nodes.hpp  printer.cpp  printer.hpp  program.hpp  semantic_exception.hpp  symbol_exception.hpp  symbol_table.cpp  symbol_table.hpp  type_checker.cpp  type_checker.hpp  visitable.hpp  visitor.hpp
vsopcompiler/CG/: code_generator.cpp  code_generator.hpp  scope_info.hpp
